Bugfix: Set header z-index so always above other elements

--- a/labeller/static/css/label-editor.css
+++ b/labeller/static/css/label-editor.css
@@ -17,6 +17,7 @@ header {
   box-shadow: var(--big-shadow);
   display: flex;
   justify-content: space-between;
+  z-index: 1;
 }
 header .controls {
   display: flex;
